--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -23,6 +23,11 @@
   background: rgba(0,0,0,0.5);  /* 半透明の背景。 */
 }
 
+.carousel-img{
+  height: 800px;
+  width: auto;
+}
+
 .font1{
    font-size: 22px;
    font-weight: bold;
@@ -36,9 +41,9 @@
     padding: 0 55px;
     border-bottom: solid;
     border-color: #741c9c;
-    
+
   }
-  
+
   .font2:before, .font2:after {
     content: '';
     position: absolute;
@@ -201,18 +206,6 @@
   width: 1120px;
   margin-left: auto;
   margin-right: auto;
-}
-
-
-.member1 {
-	display: flex;
-  flex-wrap: wrap;
-  
-  margin-left: auto;
-  margin-right: auto;
-  padding: 0px;
-  margin-top: 20px;
-  margin-bottom: 20px;
 }
 
 
