--- a/app/assets/stylesheets/contacts.scss
+++ b/app/assets/stylesheets/contacts.scss
@@ -1,3 +1,31 @@
 // Place all the styles related to the contacts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.contactform-label{
+  font-size: 40px;
+}
+
+.contact-form{
+  position: relative;
+  right: 130px;
+}
+
+.contact-mails ul{
+  margin-top: 40px;
+  display: flex;
+  justify-content: center;
+}
+
+.contact-mails ul li{
+  font-size: 40px;
+  margin-left: 20px;
+}
+
+.contac-index-title{
+  font-size: 60px;
+}
+
+.contact-item{
+  float: left;
+}
