--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -4,33 +4,29 @@
     <%= render partial: "likes/like", locals: {post: @post} %>
   </div>
 </div>
-
-  <div class='text-center'><%= image_tag(@post.image.variant(gravity: :center, resize:"640x640^").processed, class: "img-fluid") %></div>
+<div class='text-center'><%= image_tag(@post.image, class: "img-fluid post-show-image") %></div>
 
 <% if @post.user_id == current_user.id %>
-    <%= link_to 'このメッセージを削除する', post_path(@post), method: :delete, data: { confirm: '本当に削除してよろしいですか？' } %>
-    <%= link_to 'このメッセージを編集する', edit_post_path(@post),id: "post_edit" %>
+  <%= link_to 'このメッセージを削除する', post_path(@post), method: :delete, data: { confirm: '本当に削除してよろしいですか？' } %>
+  <%= link_to 'このメッセージを編集する', edit_post_path(@post),id: "post_edit" %>
+<% end %>
+
+<div class='block text-center mt-5'>
+  <%= form_with(model:[@post, @comment], method: :post) do |f| %>
+    <ul class="form-group text-center field comment-form-ul">
+      <li><%= f.text_field :content, class: "form-control1 comment-form", id: "exampleInputEmail1" %></li>
+      <li><%= f.submit 'コメントする', class: "btn btn-large btn-primary" %></li>
+    </ul>
   <% end %>
-
- 
-
-
-  <div class='block text-center mt-5'>
-    <%= form_with(model:[@post, @comment], method: :post) do |f| %>
-      <ul class="form-group text-center field comment-form-ul">
-        <li><%= f.text_field :content, class: "form-control1 comment-form", id: "exampleInputEmail1" %></li>
-        <li><%= f.submit 'コメントする', class: "btn btn-large btn-primary" %></li>
-      </ul>
-    <% end %>
-    <% @post.comments.each do |comment| %>
-      <p><%= comment.user.name %> :
-      <%= comment.content %>
+  <% @post.comments.each do |comment| %>
+    <p>
+      <%= comment.user.name %> : <%= comment.content %>
       <% if comment.user.id == current_user.id %>
-      <%= link_to 'コメントを削除する', post_comment_path(@post, comment.id), method: :delete, data: { confirm: '本当に削除してよろしいですか？' } %>
+        <%= link_to 'コメントを削除する', post_comment_path(@post, comment.id), method: :delete, data: { confirm: '本当に削除してよろしいですか？' } %>
       <% end %>
-      </p>
-      <hr>
-      <% end %>
-  </div>
+    </p>
+    <hr>
+  <% end %>
+</div>
 
 
