--- a/app/views/users/videos.html.erb
+++ b/app/views/users/videos.html.erb
@@ -12,16 +12,16 @@
     </li>
     <li class="current">
       <%= link_to "動画", videos_user_path(@user), class: "" %>
-    </li> 
+    </li>
     <li>
-      <%= link_to "コンタクト", "/", class: "" %>
-    </li> 
+      <%= link_to "コンタクト", contacts_user_path(@user), class: "" %>
+    </li>
   </ul>
 
   <% if user_signed_in? && @user.id == current_user.id %>
-    <div class="text-right"><%= link_to "ムービーを追加する", new_video_path(@video) %></div>
+    <div class="text-center mt-3"><%= link_to "ムービーを追加する", new_video_path, class:"btn btn-large btn-primary" %></div>
   <% end %>
-  
+
   <% @user.videos.each do |video| %>
     <div class=" video-title mt-5"><%= link_to video.title, video_path(video) %></div>
     <div class="text-center video-content">
