--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -208,45 +208,12 @@
   margin-right: auto;
 }
 
+.near-fanclub-text{
+  font-size: 30px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
 
-.card2 {
-  display: inline-block;
-  margin: 25px auto;
-  width: 350px;
-  height: 320px;
-  background: #fff;
-  border-radius: 5px;
-  box-shadow: 0 2px 5px #ccc;
-}
-.card-img2 {
-  border-radius: 5px 5px 0 0;
-  max-width: 100%;
-  height: auto;
-}
-.card-content1 {
-  padding: 0px;
-}
-.card-title1 {
-  font-size: 20px;
-  margin-bottom: 5px;
-  text-align: left;
-  color: #333;
-}
-.card-text1 {
-  color: #777;
-  font-size: 14px;
-  line-height: 1.5;
-}
-.card-link1 {
-  text-align: center;
-  border-top: 1px solid #eee;
-  padding: 20px;
-}
-.card-link1 a {
-  text-decoration: none;
-  color: #0bd;
-  margin: 0 10px;
-}
-.card-link1 a:hover {
-  color: #0090aa;
-}
+
